# zero2prod

./: Cargo.toml  README.md
migrations/: 20240403_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routers/: subscriptions.rs
tests/: health_check.rs
